searching of documents endpoint working
